<resources>
    <string name="Turn_on_Wi_Fi_Direct">Turn on Wi-Fi Direct</string>
    <string name="Wi_Fi_Direct_and_Mobile_hotspot_cannot_be_enabled_at_the_same_time.">Wi-Fi Direct and Mobile hotspot cannot be enabled at the same time. Mobile hotspot will be disabled while Wi-Fi Direct enabled.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About Samsung Flow</string>
    <string name="about_open_source_licences">Open source licences</string>
    <string name="about_terms_and_conditions">Terms and Conditions</string>
    <string name="about_version">Version</string>
    <string name="add_app_from_phone">Add app from phone</string>
    <string name="add_your_bio_first_dialog_desc">To use tablet biometrics to sign in to Samsung Flow, register your fingerprints or irises on your tablet and try again.</string>
    <string name="add_your_bio_first_dialog_title">Add your biometrics first</string>
    <string name="advanced_features">Advanced features</string>
    <string name="alarm">alarm</string>
    <string name="all_apps">All apps</string>
    <string name="allow_appear_on_top">Allow Appear on top</string>
    <string name="allow_appear_on_top_desc">"To show things like pop-ups or notifications on top of other apps you're using on your computer or tablet, you need to allow the Appear on top permission in Settings."</string>
    <string name="allow_location_settings">Allow access to Location settings on devices</string>
    <string name="and_more">%1$s and %2$d more</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_info">App info</string>
    <string name="app_name">Samsung Flow</string>
    <string name="appbar_base_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attach">Attach</string>
    <string name="attach_image">Image</string>
    <string name="attach_my_files">My Files</string>
    <string name="attach_sound">Audio</string>
    <string name="attach_video">Video</string>
    <string name="auth_cdf_no_finger_desc">"You've received a connection request for Samsung Flow from %s. Do you want to connect?"</string>
    <string name="auth_dialog_title_phone">Connect your phone to %s?</string>
    <string name="auth_dialog_title_tab">Connect your tablet to %s?</string>
    <string name="auth_error_title">"Couldn't verify"</string>
    <string name="auth_error_unknown_desc">Scan your fingerprint again.</string>
    <string name="auth_help_desc_input_fingerprint">"To use Samsung Flow, verify your identity using the authentication methods you've turned on."</string>
    <string name="auth_option_always_auto_connect">Always auto connect to %s</string>
    <string name="auth_turn_off_simple_connection">To reconnect to %s with manual confirmation again, turn off Simple connection in Manage devices.</string>
    <string name="auth_verify_fail_try_again">Verification failed. Please verify your identity on the mobile device again.</string>
    <string name="autorun_should_be_turned_on">Auto run should be turned on for Samsung Flow to run in the background.</string>
    <string name="bind_notification_listener_service">Notification access</string>
    <string name="biometric_auth_guide">Use your irises or fingerprints to verify your identity securely.</string>
    <string name="biometric_authentification">Verifying...</string>
    <string name="biometric_fingerprint_success_verification">%s has identified you by your fingerprint.</string>
    <string name="biometric_iris_success_verification">%s has identified you by your irises.</string>
    <string name="biometric_no_match_attempt_left">No match. You have %d attempts left.</string>
    <string name="black_screen_description">Swipe the screen or press the Side key to use your phone.</string>
    <string name="black_screen_description__tab_on_M">Swipe the screen to use your tablet.</string>
    <string name="black_screen_description_on_M">Swipe the screen to use your phone.</string>
    <string name="black_screen_description_tab">Swipe the screen or press the Side key to use your tablet.</string>
    <string name="black_screen_title">"Smart View
on
Samsung Flow"</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_connection_failed_text">Make sure your phone has Samsung Flow turned on.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bt_or_nfc_turned_on">To use Samsung Flow, %s will be turned on.</string>
    <string name="btn_desc_cancel">Cancel</string>
    <string name="btn_desc_failed">Failed</string>
    <string name="can_not_use">"Can't use %s"</string>
    <string name="can_not_use_at_same_time">%1$s and %2$s cannot be enabled at the same time. %3$s will be disabled.</string>
    <string name="cancel_all">Cancel all</string>
    <string name="cant_share_files">"Can't share files"</string>
    <string name="cant_use_mobile_hotspot_case_1">Can’t use Mobile hotspot because of network problem. Check Mobile hotspot on your phone and try again.</string>
    <string name="cant_use_mobile_hotspot_case_2">Can’t use Mobile hotspot because of temporary network problem. Try again later or set it up manually.</string>
    <string name="cant_use_mobile_hotspot_title">"Can't use Mobile Hotspot"</string>
    <string name="cant_use_this_function_in_multi_window">"Can't use this function in Multi window view."</string>
    <string name="change_location_settings">Change Location settings</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="checkbox_all">All</string>
    <string name="china_network_permission_popup_body">Allow %s to use network connections?</string>
    <string name="china_network_permission_popup_title">Use network connections</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clipboard">Clipboard</string>
    <string name="clipboard_off">Stop sharing clipboard content among connected devices</string>
    <string name="clipboard_on">Share clipboard content among connected devices</string>
    <string name="close_app">Close app</string>
    <string name="cmas_amber_alerts">AMBER alerts</string>
    <string name="cmas_emergency_alerts">Emergency alerts</string>
    <string name="cmas_extreme_alerts">Extreme alerts</string>
    <string name="cmas_presidential_alerts">Presidential alerts</string>
    <string name="cmas_severe_alerts">Severe alerts</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="connect_to_computer">Connect to computer</string>
    <string name="connect_to_new_phone">Connect to new phone</string>
    <string name="connect_to_phone">Connect to Phone</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="help_contact_us">Contact us</string>
    <string name="manage_pcs_desc">Manage your registered devices.</string>
    <string name="manage_pcs_title">Manage devices</string>
    <string name="menu_black_screen">Show phone screen</string>
    <string name="menu_do_not_disturb">Do not disturb</string>
    <string name="menu_enable_hotspot">Connect to Mobile hotspot</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_full_screen">Full view</string>
    <string name="menu_resolution">Resolution</string>
    <string name="menu_rotate_screen">Rotation</string>
    <string name="menu_screen_capture">Screen capture</string>
    <string name="menu_smart_view">Smart View</string>
    <string name="no_registered_pc">No registered PCs</string>
    <string name="notices">Notices</string>
    <string name="permissions_appear_on_top_desc">Used to show notifications on top of other apps</string>
    <string name="permissions_call_log">Call logs</string>
    <string name="permissions_call_log_desc">Used to transfer call history.</string>
    <string name="permissions_contacts">Contacts</string>
    <string name="permissions_contacts_desc">Used to transfer contacts.</string>
    <string name="permissions_continue">Continue</string>
    <string name="permissions_location">Location</string>
    <string name="permissions_location_desc">Used to search for nearby Galaxy devices using Bluetooth.</string>
    <string name="permissions_microphone">Microphone</string>
    <string name="permissions_microphone_desc">Used to connect Galaxy devices by receiving high-frequency audio.</string>
    <string name="permissions_notification_access_desc">Used to send notifications to the connected device</string>
    <string name="permissions_phone">Phone</string>
    <string name="permissions_phone_desc">Used to confirm your phone number.</string>
    <string name="permissions_sms">SMS</string>
    <string name="permissions_sms_desc">Used to transfer text messages.</string>
    <string name="permissions_storage">Storage</string>
    <string name="permissions_storage_desc">Used to transfer images, media, and files.</string>
    <string name="settings">Settings</string>
    <string name="setupwizard_permission_subtitle_optional">Optional permissions</string>
    <string name="setupwizard_permission_subtitle_required">Required permissions</string>
    <string name="special_sensitive_optional_permissions">Special sensitive optional permissions</string>
    <string name="special_sensitive_required_permissions">Special sensitive required permissions</string>
    <string name="system_alert_window">Appear on top</string>
</resources>