<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="horizontal" android:background="@color/background_round_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:id="@id/view1" android:layout_width="1.0dip" android:layout_height="0.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHeight_default="percent" app:layout_constraintHeight_percent="0.1" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="40.0sp" android:textColor="@color/actionbar_text_color" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="56.0dip" android:layout_marginBottom="15.0dip" android:fontFamily="sec-roboto-light" app:layout_constraintBottom_toTopOf="@id/permissions" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/view1" />
    <androidx.core.widget.NestedScrollView android:id="@id/permissions" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintBottom_toTopOf="@id/button_permissions_cancel" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHeight_default="wrap" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" app:layout_constraintWidth_max="640.0dip" app:layout_constraintWidth_min="450.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1.0">
            <TextView android:textSize="14.0sp" android:textColor="@color/permissions_subtitle_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/setupwizard_permission_subtitle_required" android:fontFamily="sec-roboto-light" android:layout_marginStart="22.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="69.75dip" android:layout_marginStart="22.0dip">
                <ImageView android:layout_gravity="center_vertical" android:id="@id/permissionStorageIcon" android:background="@drawable/ic_storage" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_marginEnd="16.0dip" />
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:paddingTop="14.0dip" android:paddingBottom="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textColor="@color/primary_text_color" android:id="@id/storageTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permissions_storage" android:fontFamily="sec-roboto-light" />
                    <TextView android:textSize="13.0sp" android:textColor="@color/permissions_desc_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permissions_storage_desc" android:fontFamily="sec-roboto-light" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="69.75dip" android:layout_marginStart="22.0dip">
                <ImageView android:layout_gravity="center_vertical" android:id="@id/permissionLocationIcon" android:background="@drawable/ic_location" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_marginEnd="16.0dip" />
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:paddingTop="14.0dip" android:paddingBottom="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textColor="@color/primary_text_color" android:id="@id/locationTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permissions_location" android:fontFamily="sec-roboto-light" />
                    <TextView android:textSize="13.0sp" android:textColor="@color/permissions_desc_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permissions_location_desc" android:fontFamily="sec-roboto-light" />
                </LinearLayout>
            </LinearLayout>
            <TextView android:textSize="14.0sp" android:textColor="@color/permissions_subtitle_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:text="@string/setupwizard_permission_subtitle_optional" android:fontFamily="sec-roboto-light" android:layout_marginStart="22.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="69.75dip" android:layout_marginStart="22.0dip">
                <ImageView android:layout_gravity="center_vertical" android:id="@id/permissionPhoneIcon" android:background="@drawable/ic_phone" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_marginEnd="16.0dip" />
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:paddingTop="14.0dip" android:paddingBottom="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textColor="@color/primary_text_color" android:id="@id/phoneTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permissions_phone" android:fontFamily="sec-roboto-light" />
                    <TextView android:textSize="13.0sp" android:textColor="@color/permissions_desc_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permissions_phone_desc" android:fontFamily="sec-roboto-light" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="69.75dip" android:layout_marginStart="22.0dip">
                <ImageView android:layout_gravity="center_vertical" android:id="@id/permissionContactIcon" android:background="@drawable/ic_contact" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_marginEnd="16.0dip" />
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:paddingTop="14.0dip" android:paddingBottom="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textColor="@color/primary_text_color" android:id="@id/contactTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permissions_contacts" android:fontFamily="sec-roboto-light" />
                    <TextView android:textSize="13.0sp" android:textColor="@color/permissions_desc_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permissions_contacts_desc" android:fontFamily="sec-roboto-light" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="69.75dip" android:layout_marginStart="22.0dip">
                <ImageView android:layout_gravity="center_vertical" android:id="@id/permissionSMSIcon" android:background="@drawable/ic_sms" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_marginEnd="16.0dip" />
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:paddingTop="14.0dip" android:paddingBottom="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textColor="@color/primary_text_color" android:id="@id/smsTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permissions_sms" android:fontFamily="sec-roboto-light" />
                    <TextView android:textSize="13.0sp" android:textColor="@color/permissions_desc_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permissions_sms_desc" android:fontFamily="sec-roboto-light" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="69.75dip" android:layout_marginStart="22.0dip">
                <ImageView android:layout_gravity="center_vertical" android:id="@id/permissionMicrophoneIcon" android:background="@drawable/ic_mic" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_marginEnd="16.0dip" />
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:paddingTop="14.0dip" android:paddingBottom="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textColor="@color/primary_text_color" android:id="@id/microphoneTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permissions_microphone" android:fontFamily="sec-roboto-light" />
                    <TextView android:textSize="13.0sp" android:textColor="@color/permissions_desc_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permissions_microphone_desc" android:fontFamily="sec-roboto-light" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="69.75dip" android:layout_marginStart="22.0dip">
                <ImageView android:layout_gravity="center_vertical" android:id="@id/permissionCallLogIcon" android:background="@drawable/ic_call_log" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_marginEnd="16.0dip" />
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:paddingTop="14.0dip" android:paddingBottom="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textColor="@color/primary_text_color" android:id="@id/callLogTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permissions_call_log" android:fontFamily="sec-roboto-light" />
                    <TextView android:textSize="13.0sp" android:textColor="@color/permissions_desc_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permissions_call_log_desc" android:fontFamily="sec-roboto-light" />
                </LinearLayout>
            </LinearLayout>
            <TextView android:textSize="14.0sp" android:textColor="@color/permissions_subtitle_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:text="@string/special_sensitive_required_permissions" android:fontFamily="sec-roboto-light" android:layout_marginStart="22.0dip" />
            <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:paddingTop="14.0dip" android:paddingBottom="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="22.0dip">
                <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/special_permissions_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/system_alert_window" android:fontFamily="sec-roboto-light" />
                <TextView android:textSize="14.0sp" android:textColor="@color/special_permissions_desc_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permissions_appear_on_top_desc" android:lineSpacingExtra="3.0sp" android:fontFamily="sec-roboto-light" />
            </LinearLayout>
            <TextView android:textSize="14.0sp" android:textColor="@color/permissions_subtitle_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/special_sensitive_optional_permissions" android:fontFamily="sec-roboto-light" android:layout_marginStart="22.0dip" />
            <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:paddingTop="14.0dip" android:paddingBottom="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="22.0dip">
                <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/special_permissions_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bind_notification_listener_service" android:fontFamily="sec-roboto-light" />
                <TextView android:textSize="14.0sp" android:textColor="@color/special_permissions_desc_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permissions_notification_access_desc" android:lineSpacingExtra="3.0sp" android:fontFamily="sec-roboto-light" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <Button android:textSize="19.0sp" android:textStyle="bold" android:textColor="@color/about_terms_button_text_color" android:ellipsize="end" android:id="@id/button_permissions_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" android:layout_marginBottom="48.0dip" android:minHeight="44.0dip" android:text="@string/dialog_cancel" android:singleLine="true" android:fontFamily="sec-roboto-light" android:layout_marginEnd="24.0dip" android:backgroundTint="@color/about_terms_button_bg_color" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/button_permissions_continue" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/permissions" app:layout_constraintWidth_max="240.0dip" />
    <Button android:textSize="19.0sp" android:textStyle="bold" android:textColor="#fffafafa" android:ellipsize="end" android:id="@id/button_permissions_continue" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" android:layout_marginBottom="48.0dip" android:minHeight="44.0dip" android:text="@string/permissions_continue" android:singleLine="true" android:fontFamily="sec-roboto-light" android:backgroundTint="@color/app_color_primary" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/button_permissions_cancel" app:layout_constraintTop_toBottomOf="@id/permissions" app:layout_constraintWidth_max="240.0dip" />
</androidx.constraintlayout.widget.ConstraintLayout>