<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/app_bar" android:layout_width="fill_parent" android:layout_height="192.0dip">
        <com.google.android.material.appbar.CollapsingToolbarLayout android:id="@id/collapsing_app_bar" android:layout_width="fill_parent" android:layout_height="fill_parent" android:title="@string/manage_pcs_title" app:layout_scrollFlags="exitUntilCollapsed|scroll|snap" style="@style/CollapsingToolbarStyle">
            <androidx.appcompat.widget.Toolbar android:theme="@style/Theme.AppCompat.DayNight" android:layout_gravity="bottom" android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout android:orientation="vertical" android:background="@color/background_round_color" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:orientation="vertical" android:id="@id/device_management_layout" android:background="@color/background_color" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <androidx.core.widget.NestedScrollView android:theme="@style/AppTheme" android:id="@id/desc_text_panel" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_behavior="@string/appbar_scrolling_view_behavior">
                <TextView android:id="@id/list_item_desc" android:background="@color/background_round_color" android:paddingLeft="@dimen/activity_horizontal_ss_margin" android:paddingRight="@dimen/activity_horizontal_ss_margin" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/manage_pcs_desc" style="@style/BasicDreamDescription" />
            </androidx.core.widget.NestedScrollView>
            <androidx.recyclerview.widget.RecyclerView android:id="@id/list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/desc_text_panel"
              xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" />
            <androidx.core.widget.NestedScrollView android:theme="@style/AppTheme" android:background="@color/background_round_color" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
                <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <TextView android:textSize="@dimen/listview_no_item_text_size" android:textColor="@color/no_item_title_color" android:id="@id/no_items_text" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_registered_pc" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
                </RelativeLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>